--- a/project_5/Project-5._ML.ipynb
+++ b/project_5/Project-5._ML.ipynb
@@ -2023,7 +2023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 423,
    "metadata": {},
    "outputs": [
     {
@@ -2235,7 +2235,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 388,
+     "execution_count": 423,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2263,7 +2263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 424,
    "metadata": {},
    "outputs": [
     {
@@ -2288,7 +2288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 425,
    "metadata": {},
    "outputs": [
     {
@@ -2322,7 +2322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 426,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2342,26 +2342,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 427,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['pickup_day_of_week_1', 'pickup_day_of_week_2',\n",
+       "       'pickup_day_of_week_3', 'pickup_day_of_week_4',\n",
+       "       'pickup_day_of_week_5', 'pickup_day_of_week_6', 'geo_cluster_1',\n",
+       "       'geo_cluster_2', 'geo_cluster_3', 'geo_cluster_4', 'geo_cluster_5',\n",
+       "       'geo_cluster_6', 'geo_cluster_7', 'geo_cluster_8', 'geo_cluster_9',\n",
+       "       'events_None', 'events_Rain', 'events_Snow'], dtype=object)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/plain": [
        "(1458233, 18)"
       ]
      },
-     "execution_count": 401,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "encoder = preprocessing.OneHotEncoder(drop='first', random_state=42)\n",
+    "encoder = preprocessing.OneHotEncoder(drop='first')\n",
     "columns_to_change = ['pickup_day_of_week', 'geo_cluster', 'events']\n",
     "data_onehot = train_data[columns_to_change]\n",
-    "data_onehot = encoder.fit_transform(data_onehot)\n",
-    "data_onehot.shape"
+    "data_onehot = encoder.fit_transform(data_onehot).toarray()\n",
+    "display(encoder.get_feature_names_out())\n",
+    "data_onehot = pd.DataFrame(data_onehot, columns=encoder.get_feature_names_out())\n",
+    "display(data_onehot.shape)"
    ]
   },
   {
@@ -2373,21 +2388,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 429,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "cannot concatenate object of type '<class 'scipy.sparse._csr.csr_matrix'>'; only Series and DataFrame objs are valid",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\SkillFactory\\SF_DataScience\\project_5\\Project-5._ML.ipynb Ячейка 98\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/SkillFactory/SF_DataScience/project_5/Project-5._ML.ipynb#Y202sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m train_data \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39;49mconcat(\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/SkillFactory/SF_DataScience/project_5/Project-5._ML.ipynb#Y202sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     [train_data\u001b[39m.\u001b[39;49mreset_index(drop\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\u001b[39m.\u001b[39;49mdrop(columns_to_change, axis\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m), data_onehot], \n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/SkillFactory/SF_DataScience/project_5/Project-5._ML.ipynb#Y202sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     axis\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/SkillFactory/SF_DataScience/project_5/Project-5._ML.ipynb#Y202sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m )\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/SkillFactory/SF_DataScience/project_5/Project-5._ML.ipynb#Y202sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mShape of data: \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mformat(train_data\u001b[39m.\u001b[39mshape))\n",
-      "File \u001b[1;32mc:\\Users\\Пользователь\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\util\\_decorators.py:311\u001b[0m, in \u001b[0;36mdeprecate_nonkeyword_arguments.<locals>.decorate.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    305\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(args) \u001b[39m>\u001b[39m num_allow_args:\n\u001b[0;32m    306\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(\n\u001b[0;32m    307\u001b[0m         msg\u001b[39m.\u001b[39mformat(arguments\u001b[39m=\u001b[39marguments),\n\u001b[0;32m    308\u001b[0m         \u001b[39mFutureWarning\u001b[39;00m,\n\u001b[0;32m    309\u001b[0m         stacklevel\u001b[39m=\u001b[39mstacklevel,\n\u001b[0;32m    310\u001b[0m     )\n\u001b[1;32m--> 311\u001b[0m \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
-      "File \u001b[1;32mc:\\Users\\Пользователь\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\reshape\\concat.py:347\u001b[0m, in \u001b[0;36mconcat\u001b[1;34m(objs, axis, join, ignore_index, keys, levels, names, verify_integrity, sort, copy)\u001b[0m\n\u001b[0;32m    143\u001b[0m \u001b[39m@deprecate_nonkeyword_arguments\u001b[39m(version\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, allowed_args\u001b[39m=\u001b[39m[\u001b[39m\"\u001b[39m\u001b[39mobjs\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[0;32m    144\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mconcat\u001b[39m(\n\u001b[0;32m    145\u001b[0m     objs: Iterable[NDFrame] \u001b[39m|\u001b[39m Mapping[Hashable, NDFrame],\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    154\u001b[0m     copy: \u001b[39mbool\u001b[39m \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m,\n\u001b[0;32m    155\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m DataFrame \u001b[39m|\u001b[39m Series:\n\u001b[0;32m    156\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    157\u001b[0m \u001b[39m    Concatenate pandas objects along a particular axis with optional set logic\u001b[39;00m\n\u001b[0;32m    158\u001b[0m \u001b[39m    along the other axes.\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    345\u001b[0m \u001b[39m    ValueError: Indexes have overlapping values: ['a']\u001b[39;00m\n\u001b[0;32m    346\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 347\u001b[0m     op \u001b[39m=\u001b[39m _Concatenator(\n\u001b[0;32m    348\u001b[0m         objs,\n\u001b[0;32m    349\u001b[0m         axis\u001b[39m=\u001b[39;49maxis,\n\u001b[0;32m    350\u001b[0m         ignore_index\u001b[39m=\u001b[39;49mignore_index,\n\u001b[0;32m    351\u001b[0m         join\u001b[39m=\u001b[39;49mjoin,\n\u001b[0;32m    352\u001b[0m         keys\u001b[39m=\u001b[39;49mkeys,\n\u001b[0;32m    353\u001b[0m         levels\u001b[39m=\u001b[39;49mlevels,\n\u001b[0;32m    354\u001b[0m         names\u001b[39m=\u001b[39;49mnames,\n\u001b[0;32m    355\u001b[0m         verify_integrity\u001b[39m=\u001b[39;49mverify_integrity,\n\u001b[0;32m    356\u001b[0m         copy\u001b[39m=\u001b[39;49mcopy,\n\u001b[0;32m    357\u001b[0m         sort\u001b[39m=\u001b[39;49msort,\n\u001b[0;32m    358\u001b[0m     )\n\u001b[0;32m    360\u001b[0m     \u001b[39mreturn\u001b[39;00m op\u001b[39m.\u001b[39mget_result()\n",
-      "File \u001b[1;32mc:\\Users\\Пользователь\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\reshape\\concat.py:437\u001b[0m, in \u001b[0;36m_Concatenator.__init__\u001b[1;34m(self, objs, axis, join, keys, levels, names, ignore_index, verify_integrity, copy, sort)\u001b[0m\n\u001b[0;32m    432\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(obj, (ABCSeries, ABCDataFrame)):\n\u001b[0;32m    433\u001b[0m         msg \u001b[39m=\u001b[39m (\n\u001b[0;32m    434\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mcannot concatenate object of type \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mtype\u001b[39m(obj)\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m; \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    435\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39monly Series and DataFrame objs are valid\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    436\u001b[0m         )\n\u001b[1;32m--> 437\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(msg)\n\u001b[0;32m    439\u001b[0m     ndims\u001b[39m.\u001b[39madd(obj\u001b[39m.\u001b[39mndim)\n\u001b[0;32m    441\u001b[0m \u001b[39m# get the sample\u001b[39;00m\n\u001b[0;32m    442\u001b[0m \u001b[39m# want the highest ndim that we have, and must be non-empty\u001b[39;00m\n\u001b[0;32m    443\u001b[0m \u001b[39m# unless all objs are empty\u001b[39;00m\n",
-      "\u001b[1;31mTypeError\u001b[0m: cannot concatenate object of type '<class 'scipy.sparse._csr.csr_matrix'>'; only Series and DataFrame objs are valid"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of data: (1458233, 38)\n"
      ]
     }
    ],
@@ -2401,6 +2409,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 430,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['vendor_id', 'passenger_count', 'pickup_longitude', 'pickup_latitude',\n",
+       "       'dropoff_longitude', 'dropoff_latitude', 'store_and_fwd_flag',\n",
+       "       'trip_duration', 'pickup_hour', 'holiday', 'total_distance',\n",
+       "       'total_travel_time', 'number_of_steps', 'haversine_distance',\n",
+       "       'direction', 'temperature', 'visibility', 'wind speed', 'precip',\n",
+       "       'trip_duration_log', 'pickup_day_of_week_1', 'pickup_day_of_week_2',\n",
+       "       'pickup_day_of_week_3', 'pickup_day_of_week_4', 'pickup_day_of_week_5',\n",
+       "       'pickup_day_of_week_6', 'geo_cluster_1', 'geo_cluster_2',\n",
+       "       'geo_cluster_3', 'geo_cluster_4', 'geo_cluster_5', 'geo_cluster_6',\n",
+       "       'geo_cluster_7', 'geo_cluster_8', 'geo_cluster_9', 'events_None',\n",
+       "       'events_Rain', 'events_Snow'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 430,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data.columns"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2409,7 +2448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 431,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2434,7 +2473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 432,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2464,11 +2503,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 433,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['vendor_id', 'passenger_count', 'pickup_longitude',\n",
+       "       'pickup_latitude', 'dropoff_longitude', 'dropoff_latitude',\n",
+       "       'store_and_fwd_flag', 'pickup_hour', 'holiday', 'total_distance',\n",
+       "       'total_travel_time', 'number_of_steps', 'haversine_distance',\n",
+       "       'temperature', 'pickup_day_of_week_1', 'pickup_day_of_week_2',\n",
+       "       'pickup_day_of_week_3', 'pickup_day_of_week_4',\n",
+       "       'pickup_day_of_week_5', 'pickup_day_of_week_6', 'geo_cluster_1',\n",
+       "       'geo_cluster_3', 'geo_cluster_5', 'geo_cluster_7', 'geo_cluster_9'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 433,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# ваш код здесь"
+    "selector = feature_selection.SelectKBest(score_func=feature_selection.f_regression, k=25)\n",
+    "X_best = selector.fit_transform(X_train, y_train_log)\n",
+    "selector.get_feature_names_out()"
    ]
   },
   {
@@ -2494,7 +2554,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ваш код здесь"
+    "# ваш код здес"
    ]
   },
   {
