Edited optimization practice

--- a/Current_tasks/Практика_Оптимизация.ipynb
+++ b/Current_tasks/Практика_Оптимизация.ipynb
@@ -623,7 +623,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 84,
       "metadata": {
         "id": "7tPWleMIa_a7"
       },
@@ -632,12 +632,23 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Среднеквадратическая ошибка на последней итерации: 2.7845203315673306\n"
+            "Среднеквадратическая ошибка на последней итерации для алгоритма стохастического градиентного спуска: 2.7845203315673306\n",
+            "Среднеквадратическая ошибка на последней итерации для алгоритма координатного спуска: 2.7841263145109365\n"
           ]
         }
       ],
       "source": [
-        "print(f'Среднеквадратическая ошибка на последней итерации: {mse_error(y, lin_pred(X_scaled_2, w))}')"
+        "print(f'Среднеквадратическая ошибка на последней итерации для алгоритма стохастического градиентного спуска: {mse_error(y, lin_pred(X_scaled_2, w))}')\n",
+        "print(f'Среднеквадратическая ошибка на последней итерации для алгоритма координатного спуска: {mse_error(y, lin_pred(X_norm, coef))}')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Вывод:**\n",
+        "\n",
+        "Разница между алгоритмами стохастического градиетного спуска и координатного спуска по показателю MSE оказалась минимальна (в 4 знаке после запятой). При выборе какой из данных алгоритмов использовать необходимо понимать используемую функцию потерь (ее показатели выпуклости, замкнутости)."
       ]
     }
   ],
