--- a/project_6/Project-6. Ноутбук-шаблон.ipynb
+++ b/project_6/Project-6. Ноутбук-шаблон.ipynb
@@ -16424,7 +16424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -29563,7 +29563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -29630,7 +29630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -29662,7 +29662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -29707,7 +29707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -29769,7 +29769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -29833,7 +29833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -29845,7 +29845,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29867,7 +29867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -29913,7 +29913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -30023,7 +30023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30081,7 +30081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -31015,7 +31015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -31047,7 +31047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -31094,7 +31094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -31157,7 +31157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -31222,7 +31222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -31288,7 +31288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31307,7 +31307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -31351,7 +31351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -31485,7 +31485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -32474,10 +32474,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "809"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = rfm_data_cleaned.drop(['label', 'label_t-SNE'], axis=1)\n",
+    "y = rfm_data_cleaned['label_t-SNE']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = model_selection.train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "X_test.shape[0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -32514,10 +32531,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy на тестовом наборе: 0.99\n",
+      "Наилучшие значения гиперпараметров: {'criterion': 'gini', 'max_depth': 13, 'n_estimators': 100}\n",
+      "f1_score на тестовом наборе: 0.988\n"
+     ]
+    }
+   ],
+   "source": [
+    "param_grid = {\n",
+    "    'max_depth': range(5, 15),\n",
+    "    'criterion': ['gini', 'entropy'],\n",
+    "    'n_estimators': [100, 200, 500]\n",
+    "}\n",
+    "\n",
+    "grid_search = model_selection.GridSearchCV(\n",
+    "    estimator = ensemble.RandomForestClassifier(\n",
+    "        random_state = 42\n",
+    "    ),\n",
+    "    param_grid = param_grid,\n",
+    "    cv = 5,\n",
+    "    n_jobs = -1\n",
+    ")\n",
+    "\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "print(\"accuracy на тестовом наборе: {:.3f}\".format(grid_search.score(X_test, y_test)))\n",
+    "print(\"Наилучшие значения гиперпараметров: {}\".format(grid_search.best_params_))\n",
+    "\n",
+    "rf = ensemble.RandomForestClassifier(\n",
+    "    max_depth = 13,\n",
+    "    criterion = 'gini',\n",
+    "    n_estimators = 100\n",
+    ")\n",
+    "\n",
+    "rf.fit(X_train, y_train)\n",
+    "\n",
+    "y_test_pred_rf = rf.predict(X_test)\n",
+    "print('accuracy_score на тестовом наборе: {:.3f}'.format(metrics.accuracy_score(y_test, y_test_pred_rf)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -32551,10 +32608,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy на тестовом наборе: 0.993\n",
+      "Наилучшие значения гиперпараметров: {'learning_rate': 0.01, 'max_depth': 6, 'n_estimators': 500}\n"
+     ]
+    }
+   ],
+   "source": [
+    "param_grid = {\n",
+    "    'max_depth': range(3, 7),\n",
+    "    'learning_rate': [0.001, 0.01, 0.1],\n",
+    "    'n_estimators': [100, 200, 500]\n",
+    "}\n",
+    "\n",
+    "grid_search = model_selection.GridSearchCV(\n",
+    "    estimator = ensemble.GradientBoostingClassifier(\n",
+    "        random_state = 42\n",
+    "    ),\n",
+    "    param_grid = param_grid,\n",
+    "    cv = 5,\n",
+    "    n_jobs = -1\n",
+    ")\n",
+    "\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "print(\"accuracy на тестовом наборе: {:.3f}\".format(grid_search.score(X_test, y_test)))\n",
+    "print(\"Наилучшие значения гиперпараметров: {}\".format(grid_search.best_params_))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -32565,10 +32650,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy_score на тестовом наборе: 0.993\n"
+     ]
+    }
+   ],
+   "source": [
+    "gb = ensemble.GradientBoostingClassifier(\n",
+    "    learning_rate = 0.01,\n",
+    "    max_depth = 6,\n",
+    "    n_estimators = 500\n",
+    ")\n",
+    "\n",
+    "gb.fit(X_train, y_train)\n",
+    "\n",
+    "y_test_pred_gb = gb.predict(X_test)\n",
+    "print('accuracy_score на тестовом наборе: {:.3f}'.format(metrics.accuracy_score(y_test, y_test_pred_gb)))"
+   ]
   }
  ],
  "metadata": {
