added description and goals

--- a/project_7/Project-7_Modeling.ipynb
+++ b/project_7/Project-7_Modeling.ipynb
@@ -1,6 +1,41 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 0. Постановка задачи"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "В данном проекте решается бизнес-задача в области безопасности банковского сектора. Необходимо создать комплекс мер для обнаружения и предотвращения мошеннических транзакций. \n",
+    "Платежное мошенничество или мошенничество с платежами дистанционного банковского обслуживания (ДБО) - один из видов банковского мошенничества с банковскими картами, когда мошенник осуществляет платежи по карте без ведома владельца.\n",
+    "Выявление мошенничества с платежами - это комплекс мер, направленных на обнаружение различных рисков мошенничествао с платежами, которые могут нанести ущерб. Одним из наиболее эффективных инструментов для этого является машинное обучение. Одной из основных  трудностей в области обнаружения мошеннических транзакций является низкая доля мошеннических транзакций от общего числа транзакций (как правило менее 1%)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Выбор метрики\n",
+    "\n",
+    "Точность классификации - это показатель, который обобщает производительность модели классификации как количество правильных предсказаний, деленное на общее количество прогнозов.\n",
+    "Accuracy = Correct Predictions / Total Predictions\n",
+    "\n",
+    "В случае несбалансированности предсказываемых классов в данных достижение высокго показателя Accuracy является обычной ситуацией. Поэтому показатель Accuracy не применим в несбалансированном наборе данных.\n",
+    "\n",
+    "В задачах, связанных с обнаружением высокого риска, метрика полноты (Recall) является более важным показателем оценки, чем точность. В случае обнаружения мошеннических операций с кредитными картами стоит задача максимально избежать ложных срабатываний. Мошеннические операции наносят большой ущерб, поэтому необходимо принимать соответствующие меры для их предотвращения. Ложноотрицательный случай в данном контексте означает, что мошенническая транзакция оценивается как обычная, что наносит ущерб. Поэтому ложные срабатывания не так важны, как предотвращение мошенничества.\n",
+    "\n",
+    "Полнота рассчитывается как отношение числа Positive выборок, корректно классифицированных как Positive, к общему количеству Positive семлов. Полнота измеряет способность модели обнаруживать выборки, относящиеся к классу Positive. Чем выше метрика полноты, тем больше Positive семплов было обнаружено моделью."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {},
