Edited DE-5 practice

--- a/Current_tasks/DE-5_Practice-1.ipynb
+++ b/Current_tasks/DE-5_Practice-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,11 +14,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Начнём с простого. Какую первую программу обычно пишут программисты?\n",
+      "\n",
+      "Hello world\n",
+      "\n",
+      "Сортировку «пузырьком»\n",
+      "\n",
+      "Для взлома аккаунта «ВКонтакте». Такая программа есть у каждого программиста\n",
+      "\n",
+      "Это вопрос с подвохом. Начинают они с починки утюгов, программы тут не при чём.\n",
+      "\n",
+      "right answer is  Hello world\n",
+      "Да, конечно. Это все знают.\n",
+      "90%\n",
+      "\n",
+      "Бывает ли так, что программа скомпилировалась с первого раза и без ошибок?\n",
+      "\n",
+      "Да, конечно\n",
+      "\n",
+      "Нет, это фантастика\n",
+      "\n",
+      "right answer is  Нет, это фантастика\n",
+      "75%\n",
+      "\n",
+      "Представим гипотетическую ситуацию, в которой программа всё-таки скомпилировалась с первого раза. Как вы поступите?\n",
+      "\n",
+      "Выключу комп и спокойно пойду спать — дело сделано\n",
+      "\n",
+      "Порадуюсь за себя и продолжу писать код\n",
+      "\n",
+      "Буду искать ошибку в компиляторе, где-то она должна быть\n",
+      "\n",
+      "right answer is  Буду искать ошибку в компиляторе, где-то она должна быть\n",
+      "76%\n",
+      "\n",
+      "Движемся дальше. Вопрос на проверку логического мышления. Допустим, вы пишете проект, и заказчик утвердил документ, в котором чётко написано, что он хочет получить в результате. Назовём его ТЗ. Изменятся ли требования в процессе работы над проектом?\n",
+      "\n",
+      "Изменятся, конечно\n",
+      "\n",
+      "Не изменятся. Вы же сами сказали, что всё чётко зафиксировано\n",
+      "\n",
+      "right answer is  Изменятся, конечно\n",
+      "Обычно так и бывает, да. Заказчик сам не знает, чего хочет.\n",
+      "89%\n",
+      "\n",
+      "Какой правильный ответ на вопрос про рекурсию?\n",
+      "\n",
+      "Да\n",
+      "\n",
+      "42\n",
+      "\n",
+      "Какой правильный ответ на вопрос про рекурсию?\n",
+      "\n",
+      "right answer is  Какой правильный ответ на вопрос про рекурсию?\n",
+      "84%\n",
+      "\n",
+      "Представьте, что вы пишете программу и при попытке её сборки компилятор выдал вам одну ошибку. Вы исправили её и пробуете собрать проект ещё раз. Сколько теперь будет ошибок?\n",
+      "\n",
+      "Была одна, теперь ошибок не будет\n",
+      "\n",
+      "Неизвестно\n",
+      "\n",
+      "right answer is  Неизвестно\n",
+      "94%\n",
+      "\n",
+      "Вы пришли на проект, над которым раньше работал другой программист. Что можно сказать о его коде?\n",
+      "\n",
+      "Надо сначала детально изучить проект, чтобы понять это\n",
+      "\n",
+      "Его код просто ужасен, ну кто так пишет!\n",
+      "\n",
+      "right answer is  Его код просто ужасен, ну кто так пишет!\n",
+      "87%\n",
+      "\n",
+      "Перед вами три дерева. На том, что посередине, сидит кот. На дереве с каким индексом сидит кот?\n",
+      "\n",
+      "2\n",
+      "\n",
+      "1\n",
+      "\n",
+      "0\n",
+      "\n",
+      "right answer is  1\n",
+      "86%\n",
+      "\n",
+      "Теперь чуть сложнее. Что такое Пик Балмера?\n",
+      "\n",
+      "Гора в Северной Америке\n",
+      "\n",
+      "Феномен о том, что при определённой концентрации алкоголя в крови программистские способности резко возрастают\n",
+      "\n",
+      "Яхта Стива Балмера — бывшего генерального директора Microsoft\n",
+      "\n",
+      "right answer is  Феномен о том, что при определённой концентрации алкоголя в крови программистские способности резко возрастают\n",
+      "66%\n",
+      "\n",
+      "Что такое стринги?\n",
+      "\n",
+      "Разновидность мини-трусиков\n",
+      "\n",
+      "«Верёвки» на английском\n",
+      "\n",
+      "Несколько переменных типа «строка»\n",
+      "\n",
+      "right answer is  Несколько переменных типа «строка»\n",
+      "90%\n",
+      "\n",
+      "Какое максимальное число из перечисленных можно показать пальцами одной руки?\n",
+      "\n",
+      "5\n",
+      "\n",
+      "4\n",
+      "\n",
+      "31\n",
+      "\n",
+      "32\n",
+      "\n",
+      "right answer is  31\n",
+      "29%\n",
+      "\n",
+      "Буратино дали три яблока. Два он съел. Сколько яблок осталось у Буратино?\n",
+      "\n",
+      "Одно\n",
+      "\n",
+      "У него не осталось яблок\n",
+      "\n",
+      "Никто не знает наверняка\n",
+      "\n",
+      "right answer is  Никто не знает наверняка\n",
+      "80%\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "driver = webdriver.Chrome() #ChromeDriverManager().install()\n",
+    "driver = webdriver.Chrome()\n",
     "driver.get('https://tproger.ru/quiz/real-programmer/')\n",
     "driver.find_element(By.ID, \"start_quiz\").send_keys(Keys.ENTER)\n",
     "\n",
